Added icons and dummy html pages

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<!-- Main -->
 				<!-- TODO: Solve hover issue on pic -->
 					<div class="rootNode">
-						<span class="avatar"><img src="images/maitreya_dp.jpg" alt="" /></span>
+						<span class="avatar"><img src="assets/icons/sun_code.svg" alt="" /></span>
 					</div>
 					
 					<div id="main" class="nodeDescription">
@@ -71,24 +71,26 @@
 						</footer>
 					</div>
 					<!-- About Me Node-->
-					<div class = "node" id="node1">
-						<ul class="icons innerNode" ><li><a href="https://www.instagram.com/themattybot/" class="icon brands fa-github"></a></ul>
+					<div class = "node" id="node1" onclick="window.open('aboutMe.html','mywindow');" style="cursor: pointer;">
+						<span class="avatar"><img src="assets/icons/aboutMe.svg" alt="" /></span>
 					</div>
 					<div class = "nodeMessage" id="nodeMessage1">
-						hi
+						About Me <br> (Mercury)
 					</div>
 					<!-- Projects Node-->
-					<div class = "node" id="node2">
-						<ul class="icons innerNode" ><li><a href="https://www.linkedin.com/in/maitreyasave/" class="icon brands fa-linkedin"></a></ul>
+					<div class = "node" id="node2" onclick="window.open('projects.html','mywindow');" style="cursor: pointer;">
+						<span class="avatar"><img src="assets/icons/projects.svg" alt="" /></span>
 					</div>
 					<div class = "nodeMessage" id="nodeMessage2">
 						hello
 					</div>
 					<!-- Contact Me Node-->
-					<div class = "node" id="node3">
-						<ul class="icons innerNode" ><li><a href="https://www.linkedin.com/in/maitreyasave/" class="icon brands fa-linkedin"></a></ul>
+					<div class = "node" id="node3" onclick="window.open('contactMe.html','mywindow');" style="cursor: pointer;">
+						<span class="avatar"><img src="assets/icons/contactMe.svg" alt="" /></span>
 					</div>
-				
+					<div class = "nodeMessage" id="nodeMessage2">
+						Click to go to planet Earth
+					</div>
 
 
 
@@ -155,8 +157,8 @@
 				// 	startElement,
 				// 	endElement,
 				// 	{
-				// 		color: 'purple',
-				// 		dropShadow: true,
+				// 		color: 'orange',
+				// 		plugSE: null,
 				// 		dash: {
 				// 			animation: true
 				// 		}
